--- a/employ_social.html
+++ b/employ_social.html
@@ -369,7 +369,7 @@
         </ul>
 
 
-        <ul class="row no-space img-lists-4 defaule-shadow mob-employ-social" >
+        <ul class="row no-space img-lists-4 defaule-shadow mob-employ-social">
             <li class="col-xs-12 col-sm-6 col-md-4" v-for="(item,index) in list">
                 <a class="arrow-block4 hover-white"
                    href="https://www.qlrc.com/person/customize/hkhg/recruit.html" target="_blank">
@@ -480,20 +480,101 @@
     <!--底部start-->
     <div id="qbootstrap-footer" role="contentinfo">
         <div class="row copyright">
+            <div class="bottomlist">
+                <div class="col-md-12">
+                    <div class="col-md-2 footerInner">
+                        <h2>关于海科</h2>
+                        <a href="about_introduce.html" title="公司介绍">公司介绍</a>
+                        <a href="about_organize.html" title="战略组织">战略组织</a>
+                        <a href="about_culture.html" title="企业文化">企业文化</a>
+                        <a href="about_award.html" title="荣誉奖项">荣誉奖项</a>
+                        <a href="about_social.html" title="社会责任">社会责任</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>产业布局</h2>
+                        <a href="industry_petrified.html" title="石化能源">石化能源</a>
+                        <a href="industry_chemical.html" title="特种化学品">特种化学品</a>
+                        <a href="industry_energy.html" title="企业文化">新能源材料</a>
+                        <a href="industry_medicine.html" title="医药">医药</a>
+                        <a href="industry_finance.html" title="融资租赁">融资租赁</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>产品与服务</h2>
+                        <a href="industry_petrified.html" title="石化能源">石化能源</a>
+                        <a href="industry_chemical.html" title="特种化学品">特种化学品</a>
+                        <a href="industry_energy.html" title="企业文化">新能源材料</a>
+                        <a href="industry_medicine.html" title="医药">医药</a>
+                        <a href="industry_finance.html" title="融资租赁">融资租赁</a>
+                        <a href="javascript:;" title="安全管理咨询服务">安全管理咨询服务</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>国际化管理</h2>
+                        <a href="inter_business.html" title="卓越运营体系">卓越运营体系</a>
+                        <a href="inter_safe.html" title="安全管理体系">安全管理体系</a>
+                        <a href="inter_intellect.html" title="智能化建设">智能化建设</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>国际化管理</h2>
+                        <a href="inter_business.html" title="卓越运营体系">卓越运营体系</a>
+                        <a href="inter_safe.html" title="安全管理体系">安全管理体系</a>
+                        <a href="inter_intellect.html" title="智能化建设">智能化建设</a>
+                    </div>
+                    <div class="col-md-2 footerInner footerInnerLast" style="border-left: 0px;">
+                        <h2 class="footerChooseHead border0" num="2">关注我们 </h2>
+                        <div class="footerBtnBox clearfix">
+                            <div class="footerBtn">
+                                <div class="footerBtnInner footerBtnInner1" style="display: block;">
+                                    微博 <img src="images/weiboIcon.png">
+                                </div>
+                            </div>
+                            <div class="footerBtn footerBtnLast margin0">
+                                <div class="footerBtnInner footerBtnInner2" style="display: block;">
+                                    微信 <img src="images/wechatIcon.png">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="col-md-2 footerInner">
+                        <h2>人力战略</h2>
+                        <a href="employ_profession.html" title="职业发展">职业发展</a>
+                        <a href="talent_recruitment.html" title="人才战略">人才战略</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>海科学院</h2>
+                        <a href="college.html" title="海科学院">海科学院</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>海科研究院</h2>
+                        <a href="institute.html" title="海科研究院">海科研究院</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>海科视角</h2>
+                        <a href="media_news.html" title="新闻中心">新闻中心</a>
+                        <a href="media_publish_angle.html" title="多媒体">多媒体</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>联系我们</h2>
+                        <a href="contact_us.html" title="联系我们">联系我们</a>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-12 text-center">
                 <p class="foot-txt">
+                    <a>联系我们</a>
+                    <a>隐私保护</a>
+                    <a>法律声明</a>
+                    <a>网站地图</a>
                     <!-- &copy; Copyright2019 山东海科化工集团 保留所有权利 鲁ICP备10010685号-1<br/> -->
-                    <span>&copy; Copyright2019 </span> <a
-                        href="http://www.haikegroup.com"><span class="big-txt">山东海科化工集团</span></a>
-                    <span class="big-txt">保留所有权利</span> <a
-                        href="http://beian.miit.gov.cn/"><span class="big-txt">鲁ICP备10010685号-1</span></a>
-                    <br>
-
+                    <span>&copy; Copyright2019 </span>
+                    <a href="http://www.haikegroup.com"><span class="big-txt">山东海科化工集团</span></a>
+                    <span class="big-txt">保留所有权利</span>
+                    <a href="http://beian.miit.gov.cn/"><span class="big-txt">鲁ICP备10010685号-1</span></a> <br>
                 </p>
             </div>
         </div>
     </div>
-    <!--底部end-->
 
 </div>
 <!--返回顶部start-->
@@ -545,19 +626,19 @@
     new Vue({
         el: '.vueSwiper',
         data: {
-            api:api+'/',
+            api: api + '/',
             curIndex: 0,
             lunbo: [], //轮播图
-            pageBanner:1, //页码
-            rowBanner:10, //每页条数
-            live:0, //未冻结 1冻结
-            selectAddr:3, //banner图  1--首页  2--人才招聘  3--社会招聘 4--海科学院
+            pageBanner: 1, //页码
+            rowBanner: 10, //每页条数
+            live: 0, //未冻结 1冻结
+            selectAddr: 3, //banner图  1--首页  2--人才招聘  3--社会招聘 4--海科学院
 
             list: '',
-            page:1,
-            rows:10,
-            live:0,
-            type:1, // 1 社会招聘 2 校园招聘
+            page: 1,
+            rows: 10,
+            live: 0,
+            type: 1, // 1 社会招聘 2 校园招聘
         },
         mounted(){
             this.getList()
@@ -567,7 +648,7 @@
             // 社会招聘banner
             getBanner(){
                 $.ajax({
-                    url:api+`/bannerShow/frontEndList/${this.pageBanner}/${this.rowBanner}/${this.live}/${this.selectAddr}`,
+                    url: api + `/bannerShow/frontEndList/${this.pageBanner}/${this.rowBanner}/${this.live}/${this.selectAddr}`,
                     success: (res) => {
                         var res = JSON.parse(res)
                         console.log(res);
@@ -582,7 +663,7 @@
             getList(){
                 // '/newsType/'+this.type
                 $.ajax({
-                    url: api+`/socialOrCampusRecruitment/frontEndList/${this.page}/${this.rows}/${this.live}/${this.type}`,
+                    url: api + `/socialOrCampusRecruitment/frontEndList/${this.page}/${this.rows}/${this.live}/${this.type}`,
                     success: (res) => {
                         var res = JSON.parse(res)
                         console.log(res);
