--- a/inter_intellect.html
+++ b/inter_intellect.html
@@ -384,7 +384,8 @@
                 <li id="tabIndex" class="tab-intellect">
                     <div class="autoTab animate-box">
                         <ul class="tab-nav">
-                            <li @click="getIndex(index)" v-for="(item,index) in list" class="tab-item" id='tab-item1'><span>{{item.title}}</span></li>
+                            <li @click="getIndex(index)" v-for="(item,index) in list" class="tab-item" id='tab-item1'>
+                                <span>{{item.title}}</span></li>
                             <!--<li class="tab-item" id='tab-item1'><span>智能应用</span></li>
                             <li class="tab-item" id='tab-item2'><span>自主研发</span></li>
                             <li class="tab-item" id='tab-item3'><span>聚焦发展</span></li>
@@ -400,7 +401,8 @@
                                     </p>
                                 </div>
                                 <div class="col-sm-5">
-                                    <img :src="api+item.imgPath" width="100%" class="img-responsive" style="margin-top: 10px;">
+                                    <img :src="api+item.imgPath" width="100%" class="img-responsive"
+                                         style="margin-top: 10px;">
                                 </div>
                             </li>
                             <!--<li class="row tab-box">
@@ -541,7 +543,8 @@
                     <div class="formal-establish">
                         <ul class="institute-box" style="padding:0 10% 0 0;">
                             <br>
-                            <li class="institute-li tli animate-box fadeInUp animated-fast" v-for="(item,index) in list">
+                            <li class="institute-li tli animate-box fadeInUp animated-fast"
+                                v-for="(item,index) in list">
                                 <h4>{{item.title}}</h4>
                                 <img :src="api+item.imgPath" alt="" style="width: 100%">
                                 <p style="font-size: 12px">
@@ -655,19 +658,101 @@
     <!--底部start-->
     <div id="qbootstrap-footer" role="contentinfo">
         <div class="row copyright">
+            <div class="bottomlist">
+                <div class="col-md-12">
+                    <div class="col-md-2 footerInner">
+                        <h2>关于海科</h2>
+                        <a href="about_introduce.html" title="公司介绍">公司介绍</a>
+                        <a href="about_organize.html" title="战略组织">战略组织</a>
+                        <a href="about_culture.html" title="企业文化">企业文化</a>
+                        <a href="about_award.html" title="荣誉奖项">荣誉奖项</a>
+                        <a href="about_social.html" title="社会责任">社会责任</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>产业布局</h2>
+                        <a href="industry_petrified.html" title="石化能源">石化能源</a>
+                        <a href="industry_chemical.html" title="特种化学品">特种化学品</a>
+                        <a href="industry_energy.html" title="企业文化">新能源材料</a>
+                        <a href="industry_medicine.html" title="医药">医药</a>
+                        <a href="industry_finance.html" title="融资租赁">融资租赁</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>产品与服务</h2>
+                        <a href="industry_petrified.html" title="石化能源">石化能源</a>
+                        <a href="industry_chemical.html" title="特种化学品">特种化学品</a>
+                        <a href="industry_energy.html" title="企业文化">新能源材料</a>
+                        <a href="industry_medicine.html" title="医药">医药</a>
+                        <a href="industry_finance.html" title="融资租赁">融资租赁</a>
+                        <a href="javascript:;" title="安全管理咨询服务">安全管理咨询服务</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>国际化管理</h2>
+                        <a href="inter_business.html" title="卓越运营体系">卓越运营体系</a>
+                        <a href="inter_safe.html" title="安全管理体系">安全管理体系</a>
+                        <a href="inter_intellect.html" title="智能化建设">智能化建设</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>国际化管理</h2>
+                        <a href="inter_business.html" title="卓越运营体系">卓越运营体系</a>
+                        <a href="inter_safe.html" title="安全管理体系">安全管理体系</a>
+                        <a href="inter_intellect.html" title="智能化建设">智能化建设</a>
+                    </div>
+                    <div class="col-md-2 footerInner footerInnerLast" style="border-left: 0px;">
+                        <h2 class="footerChooseHead border0" num="2">关注我们 </h2>
+                        <div class="footerBtnBox clearfix">
+                            <div class="footerBtn">
+                                <div class="footerBtnInner footerBtnInner1" style="display: block;">
+                                    微博 <img src="images/weiboIcon.png">
+                                </div>
+                            </div>
+                            <div class="footerBtn footerBtnLast margin0">
+                                <div class="footerBtnInner footerBtnInner2" style="display: block;">
+                                    微信 <img src="images/wechatIcon.png">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="col-md-2 footerInner">
+                        <h2>人力战略</h2>
+                        <a href="employ_profession.html" title="职业发展">职业发展</a>
+                        <a href="talent_recruitment.html" title="人才战略">人才战略</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>海科学院</h2>
+                        <a href="college.html" title="海科学院">海科学院</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>海科研究院</h2>
+                        <a href="institute.html" title="海科研究院">海科研究院</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>海科视角</h2>
+                        <a href="media_news.html" title="新闻中心">新闻中心</a>
+                        <a href="media_publish_angle.html" title="多媒体">多媒体</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>联系我们</h2>
+                        <a href="contact_us.html" title="联系我们">联系我们</a>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-12 text-center">
                 <p class="foot-txt">
+                    <a>联系我们</a>
+                    <a>隐私保护</a>
+                    <a>法律声明</a>
+                    <a>网站地图</a>
                     <!-- &copy; Copyright2019 山东海科化工集团 保留所有权利 鲁ICP备10010685号-1<br/> -->
                     <span>&copy; Copyright2019 </span>
                     <a href="http://www.haikegroup.com"><span class="big-txt">山东海科化工集团</span></a>
                     <span class="big-txt">保留所有权利</span>
                     <a href="http://beian.miit.gov.cn/"><span class="big-txt">鲁ICP备10010685号-1</span></a> <br>
-
                 </p>
             </div>
         </div>
     </div>
-    <!--底部end-->
 
 </div>
 <!--返回顶部start-->
@@ -701,63 +786,61 @@
 
     //轮播图
     /*var bannerSwiper = new Swiper('#banner', {
-        pagination: '.pagination',
-        slidesPerView: 'auto',
-        centeredSlides: true,
-        paginationClickable: true,
-        visibilityFullFit: true,
-        <!-- loop: true, -->
-        autoplay: true,
-        slidesOffsetBefore: 30,
-        pagination: {
-            el: '#banner .pagination',
-        }
-    });*/
+     pagination: '.pagination',
+     slidesPerView: 'auto',
+     centeredSlides: true,
+     paginationClickable: true,
+     visibilityFullFit: true,
+     <!-- loop: true, -->
+     autoplay: true,
+     slidesOffsetBefore: 30,
+     pagination: {
+     el: '#banner .pagination',
+     }
+     });*/
     /*var bannerSwiper = new Swiper('#banner1', {
-        pagination: '.pagination',
-        slidesPerView: 'auto',
-        centeredSlides: true,
-        paginationClickable: true,
-        visibilityFullFit: true,
-        <!-- loop: true, -->
-        autoplay: true,
-        slidesOffsetBefore: 15,
-        pagination: {
-            el: '#banner1 .pagination',
-        }
-    });*/
+     pagination: '.pagination',
+     slidesPerView: 'auto',
+     centeredSlides: true,
+     paginationClickable: true,
+     visibilityFullFit: true,
+     <!-- loop: true, -->
+     autoplay: true,
+     slidesOffsetBefore: 15,
+     pagination: {
+     el: '#banner1 .pagination',
+     }
+     });*/
     /*var bannerSwiper = new Swiper('#banner2', {
-        pagination: '.pagination',
-        slidesPerView: 1.6,
-        centeredSlides: true,
-        paginationClickable: true,
-        visibilityFullFit: true,
-        loop: true,
-        autoplay: true,
-        pagination: {
-            el: '#banner2 .pagination',
-        }
-    });*/
+     pagination: '.pagination',
+     slidesPerView: 1.6,
+     centeredSlides: true,
+     paginationClickable: true,
+     visibilityFullFit: true,
+     loop: true,
+     autoplay: true,
+     pagination: {
+     el: '#banner2 .pagination',
+     }
+     });*/
 </script>
 
 <script>
     new Vue({
         el: '#vueSwiper',
         data: {
-            api:api+'/',
-            page:1,
-            rows:10,
-            live:0,
-            result:[
-
-            ],
-            list:[
+            api: api + '/',
+            page: 1,
+            rows: 10,
+            live: 0,
+            result: [],
+            list: [
                 /*{
-                    title:'123',content:'456'
-                }*/
+                 title:'123',content:'456'
+                 }*/
             ], //列表
-            live1:0,
-            selectTitle:'1',//1--智能应用，2--自主研发，3--聚焦发展，4--遇见未来
+            live1: 0,
+            selectTitle: '1',//1--智能应用，2--自主研发，3--聚焦发展，4--遇见未来
         },
         mounted(){
             //智能化建设
@@ -769,12 +852,12 @@
         methods: {
             getIndex(navIndex){
                 //alert(navIndex)
-                this.selectTitle = (navIndex+1)
+                this.selectTitle = (navIndex + 1)
                 this.getNav()
             },
             chengguo(){
                 $.ajax({
-                    url: api+`/constructionResult/frontEndList/${this.page}/${this.rows}/${this.live}`,
+                    url: api + `/constructionResult/frontEndList/${this.page}/${this.rows}/${this.live}`,
                     success: (res) => {
                         var res = JSON.parse(res)
                         console.log(res);
@@ -792,8 +875,8 @@
                                 <!-- loop: true, -->
                                 autoplay: true,
                                 slidesOffsetBefore: 15,
-                                observer:true,//修改swiper自己或子元素时，自动初始化swiper
-                                observeParents:true,//修改swiper的父元素时，自动初始化swiper
+                                observer: true,//修改swiper自己或子元素时，自动初始化swiper
+                                observeParents: true,//修改swiper的父元素时，自动初始化swiper
                                 pagination: {
                                     el: '#banner1 .pagination',
                                 }
@@ -808,8 +891,8 @@
                                 <!-- loop: true, -->
                                 autoplay: true,
                                 slidesOffsetBefore: 15,
-                                observer:true,//修改swiper自己或子元素时，自动初始化swiper
-                                observeParents:true,//修改swiper的父元素时，自动初始化swiper
+                                observer: true,//修改swiper自己或子元素时，自动初始化swiper
+                                observeParents: true,//修改swiper的父元素时，自动初始化swiper
                                 pagination: {
                                     el: '#banner1 .pagination',
                                 }
@@ -820,8 +903,8 @@
                                 centeredSlides: true,
                                 paginationClickable: true,
                                 visibilityFullFit: true,
-                                observer:true,//修改swiper自己或子元素时，自动初始化swiper
-                                observeParents:true,//修改swiper的父元素时，自动初始化swiper
+                                observer: true,//修改swiper自己或子元素时，自动初始化swiper
+                                observeParents: true,//修改swiper的父元素时，自动初始化swiper
                                 loop: true,
                                 autoplay: true,
                                 pagination: {
@@ -834,7 +917,7 @@
             },
             getNav(){
                 $.ajax({
-                    url: api+`/intelligentConstruction/frontEndList/${this.live1}/${this.selectTitle}`,
+                    url: api + `/intelligentConstruction/frontEndList/${this.live1}/${this.selectTitle}`,
                     success: (res) => {
                         var res = JSON.parse(res)
                         console.log(res);
