--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                                 class="same-video" width="349.984" height="200"
                                 @mouseover="videoPlayback(index)"
                                 @mouseout="videoStopped(index)"
-                                :src="item.videoPath"
+                                :src="api+item.videoPath"
                                 muted
                         >
                             <!--<source :src="api+item.videoPath" type="video/mp4">-->
@@ -509,7 +509,7 @@
                     <!--移动端-->
                     <div class="col-xs-12 col-md-4 hidden-md hidden-lg same-player" id="playFour" v-if="videoList.length>0">
                         <video id="mobileVideo" class="same-video" controls="controls">
-                            <source :src="videoList[videoList.length-1].videoPath" type="video/mp4">
+                            <source :src="api+videoList[videoList.length-1].videoPath" type="video/mp4">
                         </video>
                         <img src="images/play.jpg" class="videoed" id="mobileVideoImg" @click="mobileClick" />
                     </div>
