--- a/person_overseas.html
+++ b/person_overseas.html
@@ -540,7 +540,7 @@
                         <span class="person-tri"></span>
                     </div>-->
                     <p>
-                        {{item.title}}<br/><!--CHIEF SCIENTIST-->
+                        {{item.title}}<br/>{{item.titleEN}}
                     </p>
                 </div>
 
