--- a/about_award.html
+++ b/about_award.html
@@ -348,11 +348,11 @@
 <!--导航-end-->
 
 
-<div id="page">
+<div id="page" class="vueSwiper">
     <!--手机端start-->
     <div class="visible-xs visible-sm award-bg-mob">
         <img src="images/award_banner_mob.png" width="100%" height="3000px">
-        <div class="award-img-mob text-center" id="mobile">
+        <div class="award-img-mob text-center">
             <a href="###" v-for="(item,index) in list">
                 <img :src="api+item.imgPath" width="100%"/>
                 <h3>{{item.title}}</h3>
@@ -396,7 +396,7 @@
             <div id="posterTvGrid">
                 <a href="javascript:void(0);" class="prev1"></a>
                 <a href="javascript:void(0);" class="next1"></a>
-                <div class="inner" id="vueSwiper">
+                <div class="inner">
                     <div>
                         <a href="javascript:void(0);" v-for="(item,index) in list">
                             <img class="cloudcarousel" :src="api+item.imgPath"/>
@@ -447,7 +447,6 @@
                           <p>中国年度最佳雇主</p>
                         </a>-->
 
-
                     </div>
                 </div>
             </div>
@@ -456,19 +455,104 @@
     </div>
     <!--PC端end-->
 
-    <!-- <div id="qbootstrap-footer" role="contentinfo">
-      <div class="row copyright">
-        <div class="col-md-12 text-center">
-          <p class="foot-txt">
-            <span>&copy; Copyright2019 </span>
-            <a href="http://www.haikegroup.com"><span class="big-txt">山东海科化工集团</span></a>
-            <span class="big-txt">保留所有权利</span>
-            <a href="http://beian.miit.gov.cn/"><span class="big-txt">鲁ICP备10010685号-1</span></a> <br>
-
-          </p>
+    <!--底部start-->
+    <!--<div id="qbootstrap-footer" role="contentinfo">
+        <div class="row copyright">
+            <div class="bottomlist">
+                <div class="col-md-12">
+                    <div class="col-md-2 footerInner">
+                        <h2>关于海科</h2>
+                        <a href="about_introduce.html" title="公司介绍">公司介绍</a>
+                        <a href="about_organize.html" title="战略组织">战略组织</a>
+                        <a href="about_culture.html" title="企业文化">企业文化</a>
+                        <a href="about_award.html" title="荣誉奖项">荣誉奖项</a>
+                        <a href="about_social.html" title="社会责任">社会责任</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>产业布局</h2>
+                        <a href="industry_petrified.html" title="石化能源">石化能源</a>
+                        <a href="industry_chemical.html" title="特种化学品">特种化学品</a>
+                        <a href="industry_energy.html" title="企业文化">新能源材料</a>
+                        <a href="industry_medicine.html" title="医药">医药</a>
+                        <a href="industry_finance.html" title="融资租赁">融资租赁</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>产品与服务</h2>
+                        <a href="industry_petrified.html" title="石化能源">石化能源</a>
+                        <a href="industry_chemical.html" title="特种化学品">特种化学品</a>
+                        <a href="industry_energy.html" title="企业文化">新能源材料</a>
+                        <a href="industry_medicine.html" title="医药">医药</a>
+                        <a href="industry_finance.html" title="融资租赁">融资租赁</a>
+                        <a href="javascript:;" title="安全管理咨询服务">安全管理咨询服务</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>国际化管理</h2>
+                        <a href="inter_business.html" title="卓越运营体系">卓越运营体系</a>
+                        <a href="inter_safe.html" title="安全管理体系">安全管理体系</a>
+                        <a href="inter_intellect.html" title="智能化建设">智能化建设</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>国际化管理</h2>
+                        <a href="inter_business.html" title="卓越运营体系">卓越运营体系</a>
+                        <a href="inter_safe.html" title="安全管理体系">安全管理体系</a>
+                        <a href="inter_intellect.html" title="智能化建设">智能化建设</a>
+                    </div>
+                    <div class="col-md-2 footerInner footerInnerLast" style="border-left: 0px;">
+                        <h2 class="footerChooseHead border0" num="2">关注我们 </h2>
+                        <div class="footerBtnBox clearfix">
+                            <div class="footerBtn">
+                                <div class="footerBtnInner footerBtnInner1" style="display: block;">
+                                    微博 <img src="images/weiboIcon.png">
+                                </div>
+                            </div>
+                            <div class="footerBtn footerBtnLast margin0">
+                                <div class="footerBtnInner footerBtnInner2" style="display: block;">
+                                    微信 <img src="images/wechatIcon.png">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="col-md-2 footerInner">
+                        <h2>人力战略</h2>
+                        <a href="employ_profession.html" title="职业发展">职业发展</a>
+                        <a href="talent_recruitment.html" title="人才战略">人才战略</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>海科学院</h2>
+                        <a href="college.html" title="海科学院">海科学院</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>海科研究院</h2>
+                        <a href="institute.html" title="海科研究院">海科研究院</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>海科视角</h2>
+                        <a href="media_news.html" title="新闻中心">新闻中心</a>
+                        <a href="media_publish_angle.html" title="多媒体">多媒体</a>
+                    </div>
+                    <div class="col-md-2 footerInner">
+                        <h2>联系我们</h2>
+                        <a href="contact_us.html" title="联系我们">联系我们</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12 text-center">
+                <p class="foot-txt">
+                    <a>联系我们</a>
+                    <a>隐私保护</a>
+                    <a>法律声明</a>
+                    <a>网站地图</a>
+                    &lt;!&ndash; &copy; Copyright2019 山东海科化工集团 保留所有权利 鲁ICP备10010685号-1<br/> &ndash;&gt;
+                    <span>&copy; Copyright2019 </span>
+                    <a href="http://www.haikegroup.com"><span class="big-txt">山东海科化工集团</span></a>
+                    <span class="big-txt">保留所有权利</span>
+                    <a href="http://beian.miit.gov.cn/"><span class="big-txt">鲁ICP备10010685号-1</span></a> <br>
+                </p>
+            </div>
         </div>
-      </div>
-    </div> -->
+    </div>-->
 
 </div>
 <!--返回顶部start-->
@@ -518,13 +602,13 @@
 
 <script>
     new Vue({
-        el: '#vueSwiper',
+        el: '.vueSwiper',
         data: {
             api:api+'/',
-            type: 1, //奖项荣誉
             list:[
                 /*{title:'123',imgpath:'./images/banner2.png'},
-                {title:'456',imgpath:'./images/banner2.png'},*/
+                {title:'456',imgpath:'./images/banner2.png'},
+                {title:'789',imgpath:'./images/banner2.png'},*/
             ],
             page:1,
             rows:10,
@@ -535,7 +619,6 @@
         },
         methods: {
             getList(){
-                // '/newsType/'+this.type
                 $.ajax({
                     url: api+`/honorAward/frontEndList/${this.page}/${this.rows}/${this.live}`,
                     success: (res) => {
@@ -565,37 +648,6 @@
                                 //autoRotate:true
                             });
                         })
-                    }
-                })
-            }
-        }
-    })
-</script>
-
-<script>
-    new Vue({
-        el: '#mobile',
-        data: {
-            type: 1, //奖项荣誉
-            list: '',
-            page:1,
-            rows:10,
-            live:0
-        },
-        mounted(){
-            this.getList()
-        },
-        methods: {
-            getList(){
-                // '/newsType/'+this.type
-                $.ajax({
-                    url: api+`/honorAward/frontEndList/${this.page}/${this.rows}/${this.live}`,
-                    success: (res) => {
-                        var res = JSON.parse(res)
-                        console.log(res);
-                        this.list = res.data.rows
-                        //this.total = res.data.total
-                        console.log(this.list);
                     }
                 })
             }
